k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-python
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-python
  template:
    metadata:
      labels:
        app: my-python
    spec:
      containers:
      - name: my-python
        image: 325106670120.dkr.ecr.us-east-1.amazonaws.com/eks/python-app:latest
        ports:
        - containerPort: 5000
