k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-cluster-ip
spec:
  selector:
    app: my-python
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
